# rusty_clevo_fan

./: Cargo.toml  README.md
src/: fan_control.rs  gui.rs  main.rs
