[package]
name = "rusty_clevo_fan"
version = "0.1.0"
authors = ["anteva"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
cpuio = "0.3"

# Profile dev if default when u use cargo build
[profile.dev]
debug = true  # Add flag `-g` for compiler
opt-level = 0 # Optimize level is 0
